fix: add text overflow ellipsis in cv blot item title

--- a/src/app/cv-edit/ui/components/cv-block-item/cv-block-item.component.less
+++ b/src/app/cv-edit/ui/components/cv-block-item/cv-block-item.component.less
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 
     .controls {
       .transition(opacity);
@@ -29,10 +30,16 @@
 
     .title {
       font-weight: 600;
+      width: 100%;
+      overflow-x: hidden;
+      text-overflow: ellipsis;
     }
 
     .details {
       flex-grow: 1;
+      overflow-x: hidden;
+      display: flex;
+      flex-direction: column;
     }
   }
 }
